--- a/Titanic_ML.ipynb
+++ b/Titanic_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "extraordinary-shepherd",
+   "id": "conscious-spotlight",
    "metadata": {},
    "source": [
     "## Encoding Features for Machine Learning using df_clean"
@@ -10,31 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "western-throw",
+   "execution_count": 57,
+   "id": "removed-latitude",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import warnings\n",
+    "warnings.simplefilter('ignore')\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "confused-swing",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install psycopg2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "civilian-quebec",
+   "execution_count": 58,
+   "id": "comprehensive-pipeline",
    "metadata": {
     "scrolled": true
    },
@@ -177,7 +171,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,8 +192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "accompanied-canadian",
+   "execution_count": 50,
+   "id": "initial-exclusive",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +334,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,8 +345,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "familiar-tunisia",
+   "execution_count": 51,
+   "id": "growing-seeking",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +487,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,8 +498,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "sticky-letters",
+   "execution_count": 52,
+   "id": "entire-disco",
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +627,7 @@
        "4  22.0      1      1  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,8 +640,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "according-concept",
+   "execution_count": 63,
+   "id": "suitable-swedish",
    "metadata": {},
    "outputs": [
     {
@@ -719,20 +713,77 @@
        "      <td>12.2875</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409</th>\n",
+       "      <td>female</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13.7750</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>411</th>\n",
+       "      <td>female</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90.0000</td>\n",
+       "      <td>Q</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>412</th>\n",
+       "      <td>female</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.7750</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>414</th>\n",
+       "      <td>female</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>108.9000</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>415</th>\n",
+       "      <td>male</td>\n",
+       "      <td>38.5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>331 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Sex   Age  Pclass     Fare Embarked\n",
-       "0    male  34.5       3   7.8292        Q\n",
-       "1  female  47.0       3   7.0000        S\n",
-       "2    male  62.0       2   9.6875        Q\n",
-       "3    male  27.0       3   8.6625        S\n",
-       "4  female  22.0       3  12.2875        S"
+       "        Sex   Age  Pclass      Fare Embarked\n",
+       "0      male  34.5       3    7.8292        Q\n",
+       "1    female  47.0       3    7.0000        S\n",
+       "2      male  62.0       2    9.6875        Q\n",
+       "3      male  27.0       3    8.6625        S\n",
+       "4    female  22.0       3   12.2875        S\n",
+       "..      ...   ...     ...       ...      ...\n",
+       "409  female   3.0       3   13.7750        S\n",
+       "411  female  37.0       1   90.0000        Q\n",
+       "412  female  28.0       3    7.7750        S\n",
+       "414  female  39.0       1  108.9000        C\n",
+       "415    male  38.5       3    7.2500        S\n",
+       "\n",
+       "[331 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,26 +791,31 @@
    "source": [
     "# Creating new dataframe for ML process - selecting features -\n",
     "\n",
-    "features_ml= test_df[[\"Sex\",\"Age\",\"Pclass\",\"Fare\",\"Embarked\"]]\n",
-    "                \n",
-    "features_ml.head(5)"
+    "features_ml= test_df[[\"Sex\",\"Age\",\"Pclass\",\"Fare\",\"Embarked\"]].copy()\n",
+    "features_ml.head(5)\n",
+    "\n",
+    "# Filling missing values from Categorical Data\n",
+    "features_ml['Embarked'].fillna(features_ml['Embarked'].value_counts().index[0],inplace=True)\n",
+    "features_ml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "celtic-bracket",
+   "execution_count": 54,
+   "id": "brazilian-psychiatry",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Target - we want to know the values of survivors\n",
+    "target= survivors\n",
     "\n",
-    "##  target = features_ml.survived.values\n"
+    "##  target = features_ml.survived.values\n",
+    "titanic_ml= features_ml[['']]\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "acute-fruit",
+   "id": "mexican-samba",
    "metadata": {},
    "source": [
     "## Starting Preprocessing"
@@ -767,8 +823,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "indirect-indianapolis",
+   "execution_count": 55,
+   "id": "planned-sailing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,8 +834,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "egyptian-provision",
+   "execution_count": 56,
+   "id": "large-boundary",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +849,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "answering-jacob",
+   "id": "international-cincinnati",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "stupid-sheet",
+   "id": "worldwide-intensity",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "uniform-impossible",
+   "id": "advisory-dance",
    "metadata": {},
    "outputs": [],
    "source": []
